assets/css/style.css
/* ... */
.php-email-form .error-message br+br {
  margin-top: 25px;
}

.php-email-form .sent-message {
  display: none;
  color: #fff;
  background: #18d26e;
  text-align: center;
  padding: 15px;
  font-weight: 600;
}

.php-email-form .loading {
  display: none;
  background: #fff;
  text-align: center;
  padding: 15px;
}

.php-email-form .loading:before {
  content: "";
  display: inline-block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  margin: 0 10px -6px 0;
  border: 3px solid #18d26e;
  border-top-color: #eee;
  -webkit-animation: animate-loading 1s linear infinite;
  animation: animate-loading 1s linear infinite;
}

@-webkit-keyframes animate-loading {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@keyframes animate-loading {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
/* Custom Navmenu */
.custom-navmenu {
  background: black;
}

.custom-navmenu .custom-menu,
.custom-navmenu .custom-menu li {
  padding: 0;
  margin: 0;
  list-style: none;
}

.custom-menu {
  float: right;
}

.custom-navmenu .custom-menu li {
  margin-bottom: 0;
  font-size: 20px;
}

.custom-navmenu .custom-menu li a {
  color: #fff;
  padding: 10px 0 !important;
}

.custom-navmenu .custom-menu li a:hover {
  text-decoration: none;
}

.custom-navmenu .custom-menu li.active a {
  text-decoration: underline;
}

.custom-navmenu h3 {
  font-size: 20px;
  color: #fff;
}

.custom-navmenu p {
  color: rgba(255, 255, 255, 0.6);
}

.custom-navmenu a {
  color: rgba(255, 255, 255, 0.7);
}

.custom-navmenu a:hover {
  color: #fff;
}

/* Custom Navbar */
.custom-navbar {
  padding-top: 50px;
  width: 100%;
}

@media (max-width: 780px) {
  .custom-navbar>.container {
    padding-right: 0;
    padding-left: 0;
  }
}

.custom-navbar .navbar-brand {
  font-size: 1.7rem;
  padding-right: 0;
  padding-left: 0;
  width: 75%;
}

@media (max-width: 780px) {
  .custom-navbar .navbar-brand {
    font-size: 1.7rem;
    padding-right: 0;
    padding-left: 15px;
    width: 75%;
  }
}

/* Burger */
.burger {
  width: 28px;
  height: 32px;
  cursor: pointer;
  position: relative;
}

.burger:before,
.burger span,
.burger:after {
  width: 100%;
  height: 2px;
  display: block;
  background: #0071bd;
  border-radius: 2px;
  position: absolute;
  opacity: 1;
}

.burger:before,
.burger:after {
  transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
  -webkit-transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
  content: "";
}

.burger:before {
  top: 4px;
}

.burger span {
  top: 15px;
}

.burger:after {
  top: 26px;
}

/* Hover */
.burger:hover:before {
  top: 7px;
}

.burger:hover:after {
  top: 23px;
}

/* Click */
.burger.active span {
  opacity: 0;
}

.burger.active:before,
.burger.active:after {
  top: 40%;
}

.burger.active:before {
  transform: rotate(45deg);
}

.burger.active:after {
  transform: rotate(-45deg);
}

.burger:focus {
  outline: none;
}

@media (max-width: 780px) {
  .burger {
    margin-right: 15px;
  }
}


/*--------------------------------------------------------------
# Footer
--------------------------------------------------------------*/
.footer {
  padding: 0 0 2rem 0;
  padding-top: 40px;
  background-color: #000;
}

.footer a {
  color: #000;
}

.social a {
  display: inline-block;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: .2rem solid #0071bd;
  background: transparent;
  position: relative;
  text-align: center;
  margin: 0.5rem 0.5rem 0.5rem 0;
  color: #0071bd;
}

.social a span {
  display: inline-block;
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
}

.social a:hover {
  background: #0071bd;
  color: white;
  box-shadow: 0 0 1rem #0071bd;
}


/* Changes Committed on 22-08-2023 */



.tablink {
  background-color: rgb(82, 80, 80);
  color: white;
  float: left;
  border: none;
  outline: none;
  cursor: pointer;
  font-style: bold;
  font-family: 'Poppins', sans-serif;
  padding: 14px 16px;
  font-size: 1.1rem;
  font-weight: 500px;
  width: 25%;
  overflow-x: auto;
  white-space: nowrap;
}


.tablink:hover {
  background-color: #777;
  opacity: 1;
}


.tabcontent {
  color: #eceff2;
  display: none;
  padding-top: 100px;
  padding: -10px;
  height: 100%;
  margin-top: -35px;
}

@media (max-width: 780px) {
  .tabcontent {
    font-size: 1rem;
    padding-right: 0px;
    margin-top: -70px;
    padding-left: 0px;
  }

  .box {
    flex-direction: row;
    flex-wrap: nowrap;
    overflow: hidden;
  }

  /* .box button {
    font-size: 0.9rem;
    min-width: 90px;
    max-width: 140px;
    padding: 8px;
  } */

  .box .text {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 60px;
    display: inline-block;
  }
}

@media (max-width: 780px) {
  .text {
    font-size: 1rem;
  }
}


#design_tab{
  border-left: 2px solid white;
  border-right: 2px solid white;
}

#design_tab1{
  border-right: 2px solid white;
}

#AI {
  background-color: #323946;
}

#TechArt {
  background-color: #323946;
}

#Animation {
  background-color: #323946;
}

#Video {
  background-color: #323946;
}

.row h3 {
  font-size: 1.8rem;
}

.row strong {
  font: 1.2rem;
  font-weight: 500px;
}


.box .pic {
  height: 25px;
  width: 25px;
}

.box button {
  font-size: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}


.list-unstyled li::before {
  color: #0071bd;
}

@media (max-width: 780px) {
  .list-unstyled {
    list-style-type: none;
  }
}
/* ... */

